--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -887,10 +887,14 @@ section,
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+#hero {
+  background: url(../img/hero-img.jpg) no-repeat;
+}
+
 .hero {
   width: 100%;
   position: relative;
-  padding: 140px 0 0 0;
+  padding: 180px 0 0 0;
 }
 
 .hero .container {
